sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (k=1){
         ^